# autonomy

./: .dockerignore  .editorconfig  .envrc  .gitignore  CLAUDE.md  Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/actions/cache_nix/: action.yaml
.github/actions/nix_upload_store/: action.yaml
.github/actions/setup_nix/: action.yaml
.github/workflows/: all.yaml  copilot.yml  docker.yaml  release.yaml
documentation/develop/: python.md
documentation/use/: CLAUDE.md  _FOR_CODING_AGENTS_.mdx  _f.mdx  _for-coding-agents.mdx  actors-for-scale.mdx  build-manually.mdx  build-with-a-coding-agent.mdx  demo-prompt.mdx  docs.json  get-started.mdx  pricing.mdx  privacy.mdx  start-here.mdx  style.css  terms.mdx  what-is-autonomy.mdx
documentation/use/_for-coding-agents/: architecture.mdx  configure-apps.mdx  create-a-new-autonomy-app.mdx  create-custom-apis.mdx  create-custom-ui.mdx  define-a-custom-ui.mdx  diagnose-errors.mdx  filesystem-tools.mdx  memory.mdx  select-models.mdx  streaming-api-and-ui.mdx  tools.mdx  visualize-workers.mdx  workers.mdx
documentation/use/agents/: agents.mdx  context.mdx  filesystem.mdx  human-in-the-loop.mdx  knowledge.mdx  memory.mdx  (+6 more)
examples/001/: autonomy.yaml
examples/002/: autonomy.yaml
examples/003/: ockam.yaml
examples/004/: README.md  autonomy.yaml  secrets.example.yaml  test.sh
examples/005/: README.md  autonomy.yaml  test.sh
examples/006/: autonomy.yaml
examples/011-dependency-review/: autonomy.yaml
examples/oncall/: .gitignore  README.md  autonomy.yaml  secrets.yaml.example
examples/sre-diagnose/: .gitignore  README.md  autonomy.yaml
source/python/: .dockerignore  Cargo.toml  Dockerfile  Makefile  pyproject.toml
source/python/examples/: 00.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  009_context_logging.py  01.py  010.py  010_agent_transcripts.py  011_code_review_assistant.py  012.py  013.py  02.py  03-client.py  03-server.py  README.md
source/python/python/autonomy/: __init__.py  agents.py  gather.py  workspace.py
source/python/python/autonomy/agents/: __init__.py  agent.py  agent_memory_knowledge.py  agent_test.py  builtin_tools.py  context.py  conversation_response.py  errors.py  http.py  names.py  repl.py  socket_address.py  state.md  test_socket_address.py  voice.py
source/python/python/autonomy/clusters/: __init__.py  cluster.py  zone.py
source/python/python/autonomy/evals/: __init__.py  eval.py
source/python/python/autonomy/flows/: __init__.py  flow.py  flow_state.py  flow_test.py  operation.py
source/python/python/autonomy/helpers/: __init__.py  is_port_free.py  parse_socket_address.py  pick_an_available_port.py  validate_address.py  validate_socket_address.py
source/python/python/autonomy/knowledge/: __init__.py  aggregator.py  database.py  in_memory.py  in_memory_test.py  knowledge.py  mem0.py  noop.py  protocol.py  search.py  searchable.py  tool.py  unsearchable.py  util.py
source/python/python/autonomy/knowledge/chunkers/: __init__.py  naive.py  protocol.py
source/python/python/autonomy/knowledge/extractors/: __init__.py  markitdown.py  markitdown_test.py  multi_document.py  multi_document_test.py  plain.py  plain_test.py  protocol.py  pypdfium2.py
source/python/python/autonomy/logs/: __init__.py  formatter.py  logs.py  logs_test.py
source/python/python/autonomy/memory/: __init__.py  memory.py
source/python/python/autonomy/models/: __init__.py  model.py  test_model.py  voice.py  voice_model.py
source/python/python/autonomy/models/clients/: __init__.py  anthropic_gateway_client.py  bedrock_client.py  default.py  gateway_client.py  gateway_config.py  litellm_client.py  load_test_rate_limiter.py  rate_limiter.py  request_queue.py  shared_clients.py  test_gateway_config.py  test_model_throttle_live.py  test_rate_limiter.py  test_request_queue.py
source/python/python/autonomy/nodes/: __init__.py  local.py  manager.py  message.py  node.py  node_protocol_test.py  protocol.py  remote.py  request.py
source/python/python/autonomy/planning/: __init__.py  cot.py  dynamic.py  protocol.py  react.py  utils.py
source/python/python/autonomy/squads/: __init__.py  squad.py
source/python/python/autonomy/tools/: __init__.py  factory.py  filesystem.py  mcp.py  protocol.py  subagents.py  tool.py  tool_test.py
source/python/python/autonomy/transcripts/: __init__.py  test_transcript.py  transcript.py
source/python/python/autonomy/voice/: __init__.py  stt.py  tts.py  vad.py
source/python/src/: errors.rs  lib.rs  logs.rs
source/python/src/integrations/mcp/: client.rs  server.rs
source/python/src/nodes/: logs.rs  mailbox.rs  mod.rs  node.rs  runtime.rs  spawner.rs  started_agents.rs  started_workers.rs  worker.rs
source/python/src/sandbox/: landlock.rs  mod.rs  seccomp.rs
source/python/tests/: model_test.py
source/python/tests/agents/: mock_utils.py  test_agent_config.py  test_agent_error_and_edge_cases.py  test_agent_error_handling.py  test_agent_timeout.py  test_agents.py  test_agents_with_tool_factories.py  test_context_template.py  test_context_template_integration.py  test_framework_instructions.py  test_hitl_core.py  test_hitl_edge_cases.py  test_hitl_integration.py  test_hitl_integration_readme.md  test_hitl_memory.py  test_hitl_streaming.py  test_memory_and_state.py  test_state_inspection.py  test_streaming_resume_debug.py  test_timeout_scenarios.py  test_tool_pair_preservation.py
source/python/tests/helpers/: test_is_port_free.py
source/python/tests/models/: __init__.py  test_bedrock_client.py  test_bedrock_client.py.bak2  test_bedrock_message_formatting.py  test_default_client.py  test_litellm_client.py  test_model.py  test_models.py  test_models_constants.py
source/python/tests/tools/: __init__.py  test_filesystem_tools.py  test_mcp_tools.py  test_tool_type_coercion.py  test_tools.py  test_workspace.py
source/rust/autonomy_command/: Cargo.toml  compile.rs  compile.yaml
tools/commitlint/: commitlint.config.js
tools/install/: install.sh
tools/nix/: flake.nix
tools/shell/: profile
(+137 files in other folders)
