[package]
name = "autonomy_in_rust_for_python"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "autonomy"
crate-type = ["cdylib"]
doc = false

[dependencies]
miette = "7.5.0"
ockam = { git = "https://github.com/build-trust/ockam.git", version = "^0.157.0" }
ockam_api = { git = "https://github.com/build-trust/ockam.git", version = "^0.100.0", default-features = false, features = ["std", "rust-crypto"]}
once_cell = "1.21.3"
pyo3 = { version = "0.24.1", features = ["abi3-py312", "experimental-async"] }
pyo3-async-runtimes = { git = "https://github.com/davide-baldo/pyo3-async-runtimes.git", branch = "davide-baldo/avoid-gil-in-async-threads", features = [
  "attributes",
  "tokio-runtime",
] }
rmcp = { version = "0.6.4", features = [
  "transport-sse-client",
  "transport-sse-client-reqwest",
  "client",
  "transport-sse-server",
  "server",
] }
serde = "1.0.219"
serde-pyobject = "0.6.1"
serde_json = "1.0.140"
tokio-util = "0.7"
tracing = { version = "0.1", default-features = false }

[features]
default = []
