[project]
name = "autonomy"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "autonomy.autonomy_in_rust_for_python"

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = ["maturin>=1.9.2", "pytest>=8.4.1", "ruff>=0.12.8"]
