[project]
name = "autonomy"
version = "0.1.0"
description = "Autonomy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncio>=3.4.3",
  "aiohttp>=3.12.4",
  "aiofiles>=24.1.0",
  "attrs>=25.3.0",
  "boto3>=1.38.45",
  "cattrs>=24.1.3",
  "colorlog>=6.9",
  "dill>=0.4.0",
  "docstring-parser>=0.16",
  "fastapi>=0.103.1",
  "litellm @ git+https://github.com/build-trust/litellm.git@ba33a4d4b165c276f7eb6a681fbe1ba23466be2f",
  "mem0ai @ git+https://github.com/build-trust/mem0.git@87915140b71c2952f37e9934146d44fad7636fbf",
  "starlette>=0.27.0",
  "scipy>=1.15.2",
  "psycopg2-binary>=2.9.10",
  "psycopg[binary]>=3.2.9",
  "pylint",
  "uvicorn>=0.24.0",
  "pypdfium2>=4.30",
  "filetype>=1.2.0",
]

authors = [{ name = "Autonomy Team", email = "support@autonomy.computer" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
]

[dependency-groups]
dev = [
  "maturin>=1.8.3",
  "maturin-import-hook>=0.2.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.2",
  "markitdown",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "autonomy.autonomy_in_rust_for_python"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
  "ignore::DeprecationWarning:litellm.*",
  "ignore::DeprecationWarning:pydantic.*",
]
