[package]
name = "autonomy_command"
version = "0.159.0"
edition = "2021"

[[bin]]
name = "compile"
path = "compile.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
colorful = "0.3"
miette = { version = "7.2.0", features = ["fancy-no-backtrace"] }
mimalloc = { version = "0.1", features = ["secure"] }
ockam = { git = "https://github.com/build-trust/ockam", branch = "develop", version = "0.157.0", features = [
  "software_vault",
] }
ockam_api = { git = "https://github.com/build-trust/ockam", branch = "develop", version = "0.100.0", default-features = false, features = [
  "std",
] }
ockam_command = { git = "https://github.com/build-trust/ockam", branch = "develop", version = "0.159.0" }
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
